...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/createWorkoutButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/transparent"
...
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genresList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/workoutList"
                android:layout_width="0dp"
                android:layout_height="1200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
...
